--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "next-auth": "^4.24.5",
+    "bcryptjs": "^2.4.3",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "react-hook-form": "^7.49.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.3.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0"
