--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bcryptjs": "^2.4.3",
     "@googlemaps/js-api-loader": "^1.16.2",
     "react-hook-form": "^7.49.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@vercel/blob": "^0.19.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
