--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.24.0",
     "mongodb": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "@googlemaps/js-api-loader": "^1.16.2"
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@vercel/blob": "^0.19.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
